--- a/queries.css
+++ b/queries.css
@@ -1,77 +1,13 @@
 /* Big tablet to 1200px (widths smaller taht the 1140px row) */
 @media only screen and (max-width: 1200px) {
-	body {
-		font-size: 15px;
-		margin-left: 0;
-
-	}
-
-	.blue {
-		width: 42%;
-	}
-
-	.img {
-		width: 37%;
-		height: 30%;
-		position: absolute;
-		top: 20%;
-		left: 14%;
-		box-shadow: 2px 2px 3px white
+	.hero-text-box {
+		width: 100%;
+		padding: 0 2%;
 	}
 
 	.row {
-		width: 100%
+		padding: 0 2%;
 	}
-
-	.intro {
-
-		width: 100%;
-		font-size: 100%
-	}
-
-	h4,
-	p {
-		font-size: 15px;
-		margin-bottom: 2px;
-		font-weight: 500
-	}
-
-	.contacti {
-		margin-left: 1px;
-
-	}
-
-	.icon {
-		display: flex;
-		justify-content: space-around;
-		background: #0652DD;
-		font-size: 20px;
-
-	}
-
-	.btn {
-		width: 70%;
-		height: 40px;
-		margin-top: 10px;
-	}
-
-	.fot {
-
-		width: 100%;
-		background: #353b48;
-		height: 5vh;
-		font-size: 14px
-	}
-
-	h3 {
-		color: white;
-		display: flex;
-		justify-content: center;
-		align-items: baseline;
-		line-height: 40px
-	}
-
-
 }
 
 
@@ -81,7 +17,56 @@
 		font-size: 18px;
 	}
 
+	section {
+		padding: 60px 0;
+	}
 
+	.long-copy {
+		width: 80%;
+		margin-left: 10%;
+	}
+
+	.steps-box {
+		margin-top: 10px;
+	}
+
+	.steps-box:last-child {
+		margin-top: 10px;
+	}
+
+	.works-steps {
+		margin-bottom: 40px;
+	}
+
+	.works-step:last-of-type {
+		margin-bottom: 60px;
+	}
+
+	.app-screen {
+		width: 50%;
+	}
+
+	.icon-small {
+		width: 17px;
+		margin-right: 5px;
+	}
+
+	.city-feature {
+		font-size: 90%;
+	}
+
+	.plan-box {
+		width: 100%;
+		margin-left: 0%;
+	}
+
+	.plan-price {
+		font-size: 250%;
+	}
+
+	.contact-form {
+		width: 80%;
+	}
 }
 
 
@@ -89,74 +74,104 @@
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
 	body {
-		font-size: 15px;
-		margin-left: 0;
-
+		font-size: 16px;
 	}
 
-	.blue {
-		width: 42%;
+	section {
+		padding: 30px 0;
 	}
 
-	.img {
-		width: 37%;
-		height: 30%;
-		position: absolute;
-		top: 20%;
-		left: 14%;
-		box-shadow: 2px 2px 3px white
+	.row,
+	.hero-text-box {
+		padding: 0 4%;
 	}
 
-	.row {
-		width: 100%
-	}
-
-	.intro {
-
+	.col {
 		width: 100%;
-		font-size: 100%
+		margin: 0 0 4% 0;
 	}
 
-	h4,
-	p {
-		font-size: 15px;
-		margin-bottom: 2px;
-		font-weight: 500
+
+	.main-nav {
+		display: none;
 	}
 
-	.contacti {
-		margin-left: 1px;
-
+	.mobile-nav-icon {
+		display: inline-block;
 	}
 
-	.icon {
-		display: flex;
-		justify-content: space-around;
-		background: #0652DD;
-		font-size: 20px;
-
+	.main-nav {
+		float: left;
+		margin-top: 30px;
+		margin-left: 25px;
 	}
 
-	.btn {
-		width: 70%;
-		height: 40px;
+	.main-nav li {
+		display: block;
+	}
+
+	.main-nav li a:link,
+	.main-nav li a:visited {
+		display: block;
+		border: 0;
+		padding: 10px 0;
+		font-size: 100%;
+	}
+
+	.sticky .main-nav {
 		margin-top: 10px;
 	}
 
-	.fot {
-
-		width: 100%;
-		background: #353b48;
-		height: 5vh;
-		font-size: 14px
+	.sticky .main-nav li a:link,
+	.sticky .main-nav li a:visited {
+		padding: 10px 0;
 	}
 
-	h3 {
-		color: white;
-		display: flex;
-		justify-content: center;
-		align-items: baseline;
-		line-height: 40px
+	.sticky .mobile-nav-icon {
+		margin-top: 10px;
+	}
+
+	.sticky .mobile-nav-icon i {
+		color: #555;
+	}
+
+
+
+	h1 {
+		font-size: 180%;
+	}
+
+	h2 {
+		font-size: 150%;
+	}
+
+	.long-copy {
+		width: 100%;
+		margin-left: 0%;
+	}
+
+	.app-screen {
+		width: 40%;
+	}
+
+	.steps-box:first-child {
+		text-align: center;
+	}
+
+	.works-step div {
+		height: 40px;
+		width: 40px;
+		margin-right: 15px;
+		padding: 4px;
+		font-size: 120%;
+	}
+
+	.works-step {
+		margin-bottom: 20px;
+	}
+
+	.works-step:last-of-type {
+		margin-bottom: 20px;
 	}
 
 }
@@ -165,77 +180,47 @@
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
-
-	body {
-		font-size: 15px;
-		margin-left: 0;
-
-	}
-
-	.blue {
-		width: 42%;
-	}
-
 	.img {
-		width: 37%;
-		height: 30%;
+
+		width: 30%;
+		height: 600px;
 		position: absolute;
-		top: 20%;
-		left: 14%;
-		box-shadow: 2px 2px 3px white
+		top: 14%;
+		left: 20%;
+		border: none;
+		transform: rotate(26deg);
+		border-radius: 20px;
+		box-shadow: 50px 2px 20px white
 	}
 
-	.row {
-		width: 100%
+
+}
+
+/* 2436x1125px at 458ppi */
+@media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
+	.img {
+
+		width: 15%;
+		height: 600px;
+		position: absolute;
+		top: 19%;
+		left: 30%;
+		border: none;
+		transform: rotate(55deg);
+		border-radius: 36px;
+		box-shadow: 1px 1px 100px white
 	}
 
-	.intro {
+	.con {
 
-		width: 100%;
-		font-size: 100%
+		position: absolute;
+		top: 25%;
+		right: 0%;
+		width: 32%;
+		background: #000;
+		text-align: center
 	}
 
-	h4,
-	p {
-		font-size: 15px;
-		margin-bottom: 2px;
-		font-weight: 500
-	}
-
-	.contacti {
-		margin-left: 1px;
-
-	}
-
-	.icon {
-		display: flex;
-		justify-content: space-around;
-		background: #0652DD;
-		font-size: 20px;
-
-	}
-
-	.btn {
-		width: 70%;
-		height: 40px;
-		margin-top: 10px;
-	}
-
-	.fot {
-
-		width: 100%;
-		background: #353b48;
-		height: 5vh;
-		font-size: 14px
-	}
-
-	h3 {
-		color: white;
-		display: flex;
-		justify-content: center;
-		align-items: baseline;
-		line-height: 40px
-	}
 
 
 }
