--- a/css/main.css
+++ b/css/main.css
@@ -150,8 +150,8 @@ p {
 }
 
 .fac,
-insta,
-twi {
+.insta,
+.twi {
 	margin-left: -20px;
 	background: #0652DD;
 	color: white;
@@ -159,9 +159,9 @@ twi {
 }
 
 .fac:hover,
-insta:hover,
-twi:hover,
-fa {
+.insta:hover,
+.twi:hover,
+.fa {
 
 	cursor: pointer;
 	background: #0652DD;
