--- a/css/queries.css
+++ b/css/queries.css
@@ -1,525 +1,47 @@
 /* Big tablet to 1200px (widths smaller taht the 1140px row) */
 @media only screen and (max-width: 1200px) {
-	.hero-text-box {
-		width: 100%;
-		padding: 0 2%;
+	.box1 {
+		width: 80%
 	}
 
-	.row {
-		padding: 0 2%;
-	}
 }
 
 
 /* Small tablet to big tablet: from 768px to 1023px */
-@media only screen and (max-width: 1023px) {
-	body {
-		font-size: 18px;
-	}
-
-	section {
-		padding: 60px 0;
-	}
-
-	.long-copy {
-		width: 80%;
-		margin-left: 10%;
-	}
-
-	.steps-box {
-		margin-top: 10px;
-	}
-
-	.steps-box:last-child {
-		margin-top: 10px;
-	}
-
-	.works-steps {
-		margin-bottom: 40px;
-	}
-
-	.works-step:last-of-type {
-		margin-bottom: 60px;
-	}
-
-	.app-screen {
-		width: 50%;
-	}
-
-	.icon-small {
-		width: 17px;
-		margin-right: 5px;
-	}
-
-	.city-feature {
-		font-size: 90%;
-	}
-
-	.plan-box {
-		width: 100%;
-		margin-left: 0%;
-	}
-
-	.plan-price {
-		font-size: 250%;
-	}
-
-	.contact-form {
-		width: 80%;
-	}
-}
+@media only screen and (max-width: 1023px) {}
 
 
 
 /* Small phones to small tablets: from 481px to 767px */
-@media only screen and (max-width: 767px) {
-	body {
-		font-size: 16px;
-	}
-
-	section {
-		padding: 30px 0;
-	}
-
-	.row,
-	.hero-text-box {
-		padding: 0 4%;
-	}
-
-	.col {
-		width: 100%;
-		margin: 0 0 4% 0;
-	}
-
-
-	.main-nav {
-		display: none;
-	}
-
-	.mobile-nav-icon {
-		display: inline-block;
-	}
-
-	.main-nav {
-		float: left;
-		margin-top: 30px;
-		margin-left: 25px;
-	}
-
-	.main-nav li {
-		display: block;
-	}
-
-	.main-nav li a:link,
-	.main-nav li a:visited {
-		display: block;
-		border: 0;
-		padding: 10px 0;
-		font-size: 100%;
-	}
-
-	.sticky .main-nav {
-		margin-top: 10px;
-	}
-
-	.sticky .main-nav li a:link,
-	.sticky .main-nav li a:visited {
-		padding: 10px 0;
-	}
-
-	.sticky .mobile-nav-icon {
-		margin-top: 10px;
-	}
-
-	.sticky .mobile-nav-icon i {
-		color: #555;
-	}
-
-
-
-	h1 {
-		font-size: 180%;
-	}
-
-	h2 {
-		font-size: 150%;
-	}
-
-	.long-copy {
-		width: 100%;
-		margin-left: 0%;
-	}
-
-	.app-screen {
-		width: 40%;
-	}
-
-	.steps-box:first-child {
-		text-align: center;
-	}
-
-	.works-step div {
-		height: 40px;
-		width: 40px;
-		margin-right: 15px;
-		padding: 4px;
-		font-size: 120%;
-	}
-
-	.works-step {
-		margin-bottom: 20px;
-	}
-
-	.works-step:last-of-type {
-		margin-bottom: 20px;
-	}
-
-}
+@media only screen and (max-width: 767px) {}
 
 
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
-	.img {
+	.box1 {}
 
-		width: 15%;
-		height: 690px;
-		position: absolute;
-		top: 24%;
-		left: 28%;
-		border: none;
-		transform: rotate(55deg);
-		border-radius: 36px;
-		box-shadow: 1px 1px 100px white
-	}
+	.dv {}
 
-	.con {
-
-		position: absolute;
-		top: 25%;
-		right: -3%;
-		width: 33%;
-
-
-	}
-
-	.blue {
-		background: #0652DD;
-		width: 45%;
-		height: 100vh;
-
-	}
-
-	.white {
-
-		background: rgba(178, 178, 178, 0.06);
-		width: 55%;
-		height: 100vh;
-	}
-
-	.titl {
-
-		margin-top: 10px;
-		font-weight: bold;
-	}
-
-	.intro {
-
-		font-size: 35px;
-		margin-top: 4%;
-		width: 70%
-	}
-
-	.intro:after {
-		content: "";
+	.toggle {
 		display: block;
-		border-bottom: 3px solid rgba(255, 0, 0, 0.49);
-		height: 5px;
-		width: 80%;
-		margin: 0 auto;
-		margin-top: 20px;
-
 	}
 
-	.btn {
-		background: #0652DD;
-		width: 59%;
-		height: 57px;
-		color: white;
-		text-transform: uppercase;
-		border: 1px solid #0652DD;
-		border-radius: 9px;
-		margin-top: 20%;
-		font-weight: 500;
-		font-size: 20px
-	}
-
-	.btn:hover,
-	.btn:active {
-
-		background: #064ccc;
-		cursor: pointer;
-		border: 1px solid #065eff;
-
-
-	}
-
-	.contact {
-		position: absolute;
-		top: 80%;
-		color: white;
-		text-transform: capitalize
-	}
-
-	h4,
-	p {
-		font-size: 35px;
-		margin-bottom: 2px;
-		font-weight: 500;
-		margin-left: 30px;
-
-	}
-
-
-
-	.contacti {
-		margin-left: 35px;
-
-	}
-
-	.icon {
-		display: flex;
-		justify-content: space-around;
-		background: #0652DD;
-		font-size: 50px;
-
-	}
-
-	.fac,
-	.insta,
-	.twi {
-		margin-left: -30px;
-		background: #0652DD;
-		color: white;
-
-
-	}
-
-	.fac:hover,
-	.insta:hover,
-	.twi:hover,
-	.fa {
-
-		cursor: pointer;
-		background: #0652DD;
-		color: white;
-
-	}
-
-	.phone {
-		color: white;
-	}
-
-	h3 {
-		color: white;
-		display: flex;
-		justify-content: center;
-		align-items: baseline;
-		line-height: 70px;
-
-
-	}
-
-	h1 {
-
-		margin-left: 30px;
-		font-size: 30px
-	}
-
-	span h1 {
-		margin-left: 55px;
-	}
-
-
-	.fot {
-
+	ul {
 		width: 100%;
-		background: #353b48;
-		height: 7vh;
-		margin-left: 19px
-	}
-
-}
-
-/* 2436x1125px at 458ppi */
-@media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
-	.img {
-
-		width: 15%;
-		height: 600px;
-		position: absolute;
-		top: 24%;
-		left: 28%;
-		border: none;
-		transform: rotate(55deg);
-		border-radius: 36px;
-		box-shadow: 1px 1px 100px white
-	}
-
-	.con {
-
-		position: absolute;
-		top: 25%;
-		right: -3%;
-		width: 33%;
-
+		display: none;
 
 	}
 
-	.blue {
-		background: #0652DD;
-		width: 45%;
-		height: 100vh;
-
-	}
-
-	.white {
-
-		background: rgba(178, 178, 178, 0.06);
-		width: 55%;
-		height: 100vh;
-	}
-
-	.titl {
-
-		margin-top: 10px;
-		font-weight: bold;
-	}
-
-	.intro {
-
-		font-size: 35px;
-		margin-top: 4%;
-		width: 70%
-	}
-
-	.intro:after {
-		content: "";
+	ul li {
 		display: block;
-		border-bottom: 3px solid rgba(255, 0, 0, 0.49);
-		height: 5px;
-		width: 80%;
 		margin: 0 auto;
-		margin-top: 20px;
-
-	}
-
-	.btn {
-		background: #0652DD;
-		width: 59%;
-		height: 57px;
-		color: white;
-		text-transform: uppercase;
-		border: 1px solid #0652DD;
-		border-radius: 9px;
-		margin-top: 20%;
-		font-weight: 500;
-		font-size: 20px
-	}
-
-	.btn:hover,
-	.btn:active {
-
-		background: #064ccc;
-		cursor: pointer;
-		border: 1px solid #065eff;
 
 
 	}
 
-	.contact {
-		position: absolute;
-		top: 80%;
-		color: white;
-		text-transform: capitalize
-	}
-
-	h4,
-	p {
-		font-size: 35px;
-		margin-bottom: 2px;
-		font-weight: 500;
-		margin-left: 30px;
-
-	}
-
-
-
-	.contacti {
-		margin-left: 35px;
-
-	}
-
-	.icon {
-		display: flex;
-		justify-content: space-around;
-		background: #0652DD;
-		font-size: 50px;
-
-	}
-
-	.fac,
-	.insta,
-	.twi {
-		margin-left: -30px;
-		background: #0652DD;
-		color: white;
-
-
-	}
-
-	.fac:hover,
-	.insta:hover,
-	.twi:hover,
-	.fa {
-
-		cursor: pointer;
-		background: #0652DD;
-		color: white;
-
-	}
-
-	.phone {
-		color: white;
-	}
-
-	h3 {
-		color: white;
-		display: flex;
-		justify-content: center;
-		align-items: baseline;
-		line-height: 70px;
-
-
-	}
-
-	h1 {
-
-		margin-left: 30px;
-		font-size: 30px
-	}
-
-	span h1 {
-		margin-left: 55px;
-	}
-
-
-	.fot {
-
-		width: 100%;
-		background: #353b48;
-		height: 7vh;
-		margin-left: 19px
+	.active {
+		display: block;
 	}
 
 
