--- a/css/main.css
+++ b/css/main.css
@@ -4,189 +4,136 @@
 
 }
 
+#particles-js {
+
+	background-image: url(http://placeimg.com/1000/1000/nature);
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+
+	background-repeat: no-repeat;
+
+}
+
 html,
 body {
 	margin: 0;
-	margin-left: 1.5%;
 	padding: 0;
 	box-sizing: border-box;
-	background-color: #fff;
 	color: #555;
 	font-family: 'Lato', 'Arial', sans-serif;
 	font-weight: 300;
 	font-size: 20px;
 	text-rendering: optimizeLegibility;
-	overflow-x: hidden;
-}
-
-.main {
-	position: relative;
-}
-
-.row {
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-
-
-.blue {
-	background: #0652DD;
-	width: 30%;
-	height: 100vh;
 
 }
 
-.white {
+#particles-js {
 
-	background: rgba(178, 178, 178, 0.06);
-	width: 70%;
-	height: 100vh;
+	background-image: url(http://placeimg.com/1000/1000/nature);
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+
 }
 
-.tr {
+
+nav {
+	width: 100%;
+
+}
+
+ul {
+	width: 89%;
+	margin: 0 auto;
+	padding: 0;
+	padding-left: 12px;
+
+}
+
+ul li {
+	list-style: none;
+	display: inline-block;
+	padding: 20px;
+
+	width: 28.8%;
+
+}
+
+ul li:hover {
+	background-image: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 255))
+}
+
+home:hover {
+	animation-name: "animated jello";
+}
+
+ul li a {
+	color: white;
+	text-decoration: none;
+	display: block;
+	text-align: center
+}
+
+p a {
+	display: inline-block;
+	text-decoration: none;
+	text-align: center;
 	width: 100%
 }
 
-.img {
-
-	width: 30%;
-	height: 600px;
-	position: absolute;
-	top: 14%;
-	left: 20%;
-	border: none;
-	transform: rotate(40deg);
-	border-radius: 20px;
-	box-shadow: 50px 2px 20px white
-}
-
-.con {
-
-	position: absolute;
-	top: 25%;
-	right: 1%;
-	width: 32%
-}
-
-span {
-	color: #0652DD;
-}
-
-.titl {
-
-	margin-top: 10px;
-	font-weight: bold;
-}
-
-.intro {
-
-	font-size: 20px;
-	margin-top: 4%;
-	width: 56%
-}
-
-.intro:after {
-	content: "";
-	display: block;
-	border-bottom: 3px solid rgba(255, 0, 0, 0.49);
-	height: 2px;
-	width: 80%;
-	margin: 0 auto;
-	margin-top: 20px;
-
-}
-
-.btn {
-	background: #0652DD;
-	width: 25%;
-	height: 50px;
-	color: white;
-	text-transform: uppercase;
-	border: 1px solid #0652DD;
-	border-radius: 9px;
-	margin-top: 20%;
-
-}
-
-.btn:hover,
-.btn:active {
-
-	background: #064ccc;
-	cursor: pointer;
-	border: 1px solid #065eff;
-
-
-}
-
-.contact {
-	position: absolute;
-	top: 80%;
-	color: white;
-	text-transform: capitalize
-}
-
-h4,
-p {
-	font-size: 20px;
-	margin-bottom: 2px;
-	font-weight: 500
+.toggle {
+	width: 100%;
+	padding: 10px 20px;
+	background: #001f44;
+	text-align: right;
+	box-sizing: border-box;
+	display: none
 }
 
 
-.contacti {
-	margin-left: 10px;
 
-}
 
 .icon {
-	display: flex;
-	justify-content: space-around;
-	background: #0652DD;
+	color: white;
 	font-size: 30px;
 
+
+
 }
 
-.fac,
-.insta,
-.twi {
-	margin-left: -20px;
-	background: #0652DD;
+
+
+
+.row {
+	max-width: 1140px;
+	margin: 0 auto;
+
+}
+
+
+main {
+
+
+	height: 900px;
+	width: 100%
+}
+
+
+
+.box1 {
+	background: blue;
+	height: 30vh;
 	color: white;
 
-}
-
-.fac:hover,
-.insta:hover,
-.twi:hover,
-.fa {
-
-	cursor: pointer;
-	background: #0652DD;
-	color: white;
 
 }
 
-img:hover {
+.box2 {
+	background: yellow;
+	height: 30vh;
 
-	transition: transform 2.70s;
-	background: black;
 
-}
-
-.fot {
-
-	width: 100%;
-	background: #353b48;
-	height: 7vh
-}
-
-h3 {
-	color: white;
-	display: flex;
-	justify-content: center;
-	align-items: baseline;
-	line-height: 70px
 }
